# GPUImage-Android

./: .gitignore  build.gradle  config.gradle  maven.gradle  readme.md  settings.gradle
app/: build.gradle
app/libs/: matisse-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_exo_player.xml  activity_gesture.xml  activity_image.xml  activity_main.xml  activity_surface_view.xml  activity_texture_view.xml  activity_transform.xml  activity_video.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
core/src/main/res/values/: attrs.xml
gif-lib/: build.gradle
gif-lib/src/main/: AndroidManifest.xml
gif-lib/src/main/cpp/: CMakeLists.txt  GifTranscoder.cpp  GifTranscoder.h  gif-lib.cpp  gif_decode.cpp  log.h
gradle/wrapper/: gradle-wrapper.properties
release/com/alien/gpuimage/gpuimage/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
release/com/alien/gpuimage/gpuimage/1.0.0-01/: gpuimage-1.0.0-01.aar  gpuimage-1.0.0-01.aar.md5  gpuimage-1.0.0-01.aar.sha1  gpuimage-1.0.0-01.pom  gpuimage-1.0.0-01.pom.md5  gpuimage-1.0.0-01.pom.sha1
release/com/alien/gpuimage/gpuimage/1.0.0-02/: gpuimage-1.0.0-02.aar  gpuimage-1.0.0-02.aar.md5  gpuimage-1.0.0-02.aar.sha1  gpuimage-1.0.0-02.pom  gpuimage-1.0.0-02.pom.md5  gpuimage-1.0.0-02.pom.sha1
release/com/alien/gpuimage/gpuimage/1.0.0-03/: gpuimage-1.0.0-03.aar  gpuimage-1.0.0-03.aar.md5  gpuimage-1.0.0-03.aar.sha1  gpuimage-1.0.0-03.pom  gpuimage-1.0.0-03.pom.md5  (+1 more)
(+139 files in other folders)
